# psikusy

./: README.md
extra/: fin.cpp
extra/szk/: ast.c  dzi.c  mns.c  var.cpp
l0/: a1.c  main.c
l1/: main.c
l2/: main.c
l3/: main.c
l4/: main.c
l5/: main.c
l6/: main.c
l7/: main.c
l8/: CMakeLists.txt
l8/include/: anagram.h  palindrome.h
l8/src/: anagram.c  main.c  palindrome.c
